// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Organisms/Header default 1`] = `
.c3 {
  font-size: 5vw;
  font-weight: bold;
  overflow: hidden;
  white-space: nowrap;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 calc( * 2);
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c1 {
  max-width: calc( * 9);
  display: block;
  line-height: 1em;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c2 {
  max-width: calc( * 9);
  display: block;
  line-height: 1em;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  text-align: right;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 calc( * 2);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: fixed;
  top: 0;
  z-index: 1000;
  height: calc( * 6);
  width: 100%;
  border-bottom: solid 2px #babfbd;
}

.c0 a {
  display: inline-block;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  >
    <p>
      Right
    </p>
  </div>
  <h2
    className="c3"
  >
    Title
  </h2>
</div>
`;

exports[`Storyshots Organisms/Header props left 1`] = `
.c3 {
  font-size: 5vw;
  font-weight: bold;
  overflow: hidden;
  white-space: nowrap;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 calc( * 2);
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c1 {
  max-width: calc( * 9);
  display: block;
  line-height: 1em;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c2 {
  max-width: calc( * 9);
  display: block;
  line-height: 1em;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  text-align: right;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 calc( * 2);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: fixed;
  top: 0;
  z-index: 1000;
  height: calc( * 6);
  width: 100%;
  border-bottom: solid 2px #babfbd;
}

.c0 a {
  display: inline-block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p>
      Left
    </p>
  </div>
  <div
    className="c2"
  >
    <p>
      Right
    </p>
  </div>
  <h2
    className="c3"
  >
    Title
  </h2>
</div>
`;
